
[TestLexingKeywords - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:3},
        },
        Type:  14,
        Value: "fn",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:4},
            End:   ast.Location{Line:1, Column:7},
        },
        Type:  18,
        Value: "var",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:8},
            End:   ast.Location{Line:1, Column:11},
        },
        Type:  19,
        Value: "val",
    },
}
---

[TestLexingOperators - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
        Type:  35,
        Value: "+",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:3},
            End:   ast.Location{Line:1, Column:4},
        },
        Type:  36,
        Value: "-",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:5},
            End:   ast.Location{Line:1, Column:6},
        },
        Type:  37,
        Value: "*",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:7},
            End:   ast.Location{Line:1, Column:8},
        },
        Type:  38,
        Value: "/",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:9},
            End:   ast.Location{Line:1, Column:10},
        },
        Type:  43,
        Value: "=",
    },
}
---

[TestLexingIdentifiers - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:4},
        },
        Type:  0,
        Value: "foo",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:2, Column:1},
            End:   ast.Location{Line:2, Column:4},
        },
        Type:  0,
        Value: "bar",
    },
}
---

[TestLexingLiterals - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:7},
        },
        Type:  2,
        Value: "hello",
    },
}
---

[TestLexingParens - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
        Type:  0,
        Value: "a",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:3},
            End:   ast.Location{Line:1, Column:4},
        },
        Type:  37,
        Value: "*",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:5},
            End:   ast.Location{Line:1, Column:6},
        },
        Type:  57,
        Value: "(",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:6},
            End:   ast.Location{Line:1, Column:7},
        },
        Type:  0,
        Value: "b",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:8},
            End:   ast.Location{Line:1, Column:9},
        },
        Type:  35,
        Value: "+",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:10},
            End:   ast.Location{Line:1, Column:11},
        },
        Type:  0,
        Value: "c",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:11},
            End:   ast.Location{Line:1, Column:12},
        },
        Type:  58,
        Value: ")",
    },
}
---

[TestLexingLineComments - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:7},
        },
        Type:  10,
        Value: "// foo",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:2, Column:1},
            End:   ast.Location{Line:2, Column:7},
        },
        Type:  10,
        Value: "// bar",
    },
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:3, Column:1},
            End:   ast.Location{Line:3, Column:1},
        },
        Type:  64,
        Value: "",
    },
}
---

[TestLexingBlockComment - 1]
[]*parser.Token{
    &parser.Token{
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:4, Column:2},
        },
        Type:  11,
        Value: "/**\n * foo\n * bar\n */",
    },
}
---
